<resources>
    <string name="app_name">Vikash</string>
    <string name="action_settings">Settings</string>

    <string name="spacer"> </string>
    <string name="desc"> </string>
    <string name="car">Register Car</string>
    <string name="calendar">Calendar</string>
    <string name="compass">Compass Map</string>
    <string name="title_activity_maps">Map</string>

    <string name="producer">Producers</string>
    <string name="producerNames">Alexzander Avila\nNicholas Jones\nJason Thai\n</string>
    <string name="specialThanks">Special Thanks</string>
    <string name="specialThanksNames">Gordon Griesel\nVikash A. Lakhani\n</string>
    <string name="aboutUs">This software is our project for Advance Software Engineering.\n
        It was meant to solve Vikash\'s problem of renting a car and having to refuel it before returning it.\n
        We hope you enjoy our software and we apologize for any bugs that are found.</string>

    <string name="intro">Welcome to Vikash\'s Gas Station Finder App</string>

    <string name="enter_car_info">Enter Car Info</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="color">Color</string>
    <string name="lic_plate">Lic. Plate</string>
    <string name="mileage">Mileage</string>
    <string name="makehint">Ford</string>
    <string name="modelhint">Focus</string>
    <string name="yearhint">2016</string>
    <string name="colorhint">Silver</string>
    <string name="lichint">######</string>
    <string name="milehint">52000</string>
    <string name="button_save">Save</string>
    <string name="new_car">New Car</string>
    <string name="edit_delete_car">Edit/Delete Car</string>

    <string name="permission_explanation">Allow this app to use your location to show distance to attractions?</string>
    <string name="permission_explanation_action">Let\'s do it!</string>

</resources>
