<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jasonthai.project.MainActivity"
    tools:showIn="@layout/activity_main"

    android:orientation="vertical" >

        <!-- top spacer -->
        <TextView
            android:id="@+id/textViewSpacer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spacer"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:textSize="10dp" />
        <!-- csub image -->
        <ImageView android:id="@+id/carImageView"
            android:contentDescription="@string/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick1"
            android:clickable="true"
            android:layout_below="@+id/textViewSpacer1"
            android:gravity="left"
            android:src="@drawable/car" />
        <!-- spacer to the right -->
        <TextView
            android:id="@+id/tV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  "
            android:layout_toRightOf="@+id/carImageView"
            android:layout_centerInParent="true"
            android:textSize="40dp" />
        <!-- spacer to the right and up -->
        <TextView
            android:id="@+id/tV11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  "
            android:layout_toRightOf="@+id/tV1"
            android:textSize="25dp" />
        <!-- text is below the top spacer -->
        <TextView
            android:id="@+id/registerCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick1"
            android:clickable="true"
            android:text="@string/car"
            android:layout_toRightOf="@+id/tV1"
            android:layout_below="@+id/tV11"
            android:textSize="36dp" />

        <!-- vertical spacer between images -->
        <TextView
            android:id="@+id/textViewSpacer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spacer"
            android:layout_below="@+id/carImageView"
            android:textSize="10dp" />

        <!-- image -->
        <ImageView android:id="@+id/calendarImageView"
            android:contentDescription="@string/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick2"
            android:clickable="true"
            android:src="@drawable/calendar"
            android:layout_below="@+id/textViewSpacer2"
            android:gravity="left" />
        <!-- spacer to right of image -->
        <TextView
            android:id="@+id/tV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  "
            android:layout_below="@+id/textViewSpacer2"
            android:layout_toRightOf="@+id/calendarImageView"
            android:textSize="20dp" />
        <!-- spacer to right and up -->
        <TextView
            android:id="@+id/tV22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  "
            android:layout_below="@+id/textViewSpacer2"
            android:layout_toRightOf="@+id/tV2"
            android:textSize="12dp" />
        <TextView
            android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick2"
            android:clickable="true"
            android:text="@string/calendar"
            android:layout_toRightOf="@+id/tV2"
            android:layout_below="@+id/tV22"
            android:textSize="36dp" />

        <!-- vertical spacer between images -->
        <TextView
            android:id="@+id/textViewSpacer8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spacer"
            android:layout_below="@+id/calendarImageView"
            android:textSize="10dp" />

        <!-- image -->
        <ImageView android:id="@+id/compassImageView"
            android:contentDescription="@string/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick3"
            android:clickable="true"
            android:src="@drawable/compass"
            android:layout_below="@+id/textViewSpacer8"
            android:gravity="left" />
        <!-- spacer to right of image -->
        <TextView
            android:id="@+id/tV3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  "
            android:layout_below="@+id/textViewSpacer8"
            android:layout_toRightOf="@+id/compassImageView"
            android:textSize="20dp" />
        <!-- spacer to right and up -->
        <TextView
            android:id="@+id/tV33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  "
            android:layout_below="@+id/textViewSpacer8"
            android:layout_toRightOf="@+id/tV3"
            android:textSize="12dp" />
        <TextView
            android:id="@+id/compassMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick3"
            android:clickable="true"
            android:text="@string/compass"
            android:layout_toRightOf="@+id/tV3"
            android:layout_below="@+id/tV33"
            android:textSize="36dp" />

</RelativeLayout>
